--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Barlow:wght@300;400;700&display=swap');
+
 * {
     box-sizing: border-box;
 }
@@ -7,6 +9,8 @@ html {
 }
 
 body {
+    font-family: 'Barlow', sans-serif;
     margin: 0;
+    padding: 96px 16px;
     background-color: #fff;
 }
