Removing fragments, adding loader.svg, using svg for loading, changes to error, adding styling

--- a/src/components/MainSection/MainSection.module.scss
+++ b/src/components/MainSection/MainSection.module.scss
@@ -2,3 +2,10 @@
     padding-bottom: 24px;
     border-bottom: 2px dashed #FFF;
 }
+
+.loader-container {
+    display: flex;
+    justify-content: center;
+    margin-top: 184px;
+    margin-bottom: 213px;
+}
