--- a/src/components/Movie/Movie.module.scss
+++ b/src/components/Movie/Movie.module.scss
@@ -27,5 +27,10 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        cursor: pointer;
+
+        &-active {
+            padding: 0;
+        }
     }
 }
