--- a/src/components/Movie/Movie.module.scss
+++ b/src/components/Movie/Movie.module.scss
@@ -10,6 +10,8 @@
         display: flex;
         justify-content: space-between;
         padding: 14.5px 15px;
+        box-shadow: 0px 4px 12px rgb(224 230 238 / 50%);
+        border-radius: 4px;
     }
 
     &__title {
@@ -32,5 +34,9 @@
         &-active {
             padding: 0;
         }
+    }
+
+    &__content {
+        padding: 0 15px;
     }
 }
