--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Barlow:wght@300;400;700&display=swap');
+@import "~bootstrap/scss/bootstrap";
 
 * {
     box-sizing: border-box;
