--- a/src/components/MovieTable/MovieTable.module.scss
+++ b/src/components/MovieTable/MovieTable.module.scss
@@ -34,21 +34,37 @@
     th {
         font-weight: 400;
         text-align: right;
+        padding-left: 15px;
+        padding-right: 15px;
 
         &:first-child {
             text-align: left;
+            padding-left: 0;
+            padding-right: 15px;
 
             .movie-table__column-box {
                 justify-content: start;
             }
         }
+
+        &:last-child {
+            padding-right: 0;
+        }
     }
 
     td {
         text-align: right;
+        padding-left: 15px;
+        padding-right: 15px;
 
         &:first-child {
             text-align: left;
+            padding-left: 0;
+            padding-right: 15px;
+        }
+
+        &:last-child {
+            padding-right: 0;
         }
     }
 }
