--- a/src/components/MoviesList/MoviesList.module.scss
+++ b/src/components/MoviesList/MoviesList.module.scss
@@ -3,9 +3,10 @@ $desktop: 769px;
 .movies-list {
     list-style: none;
     margin: 0;
-    padding: 0 20px;
+    padding: 0 20px 24px;
+    border-bottom: 2px dashed #FFF;
 
     @media screen and (min-width: $desktop) {
-        padding: 0 30px;
+        padding: 0 30px 24px;
     }
 }
