--- a/src/components/AddMovieContent/AddMovieContent.module.scss
+++ b/src/components/AddMovieContent/AddMovieContent.module.scss
@@ -1,1 +1,76 @@
-.control {}
+$desktop: 769px;
+
+.form {
+    padding: 31px 15px;
+
+    @media screen and (min-width: $desktop) {
+        padding: 31px 95px;
+    }
+
+    &__control-group {
+        margin-bottom: 17px;
+
+        label {
+            font-size: 12px;
+            line-height: 14px;
+            font-weight: 400;
+            color: #555555;
+            display: block;
+            width: 100%;
+        }
+
+        input {
+            font-size: 16px;
+            line-height: 19px;
+            font-weight: 400;
+            display: block;
+            color: #474747;
+            width: 100%;
+            padding-top: 5px;
+            padding-bottom: 7px;
+            border-top: 0;
+            border-left: 0;
+            border-right: 0;
+            border-bottom: 1px solid #999999;
+
+            &::placeholder {
+                color: #C4C4C4;
+            }
+        }
+    }
+
+    &__actions {
+        margin-top: 30px;
+        display: flex;
+        justify-content: end;
+
+        button {
+            font-size: 12px;
+            line-height: 16px;
+            font-weight: 700;
+            letter-spacing: 0.05em;
+            color: #fff;
+            background: #1BA1BE;
+            border: none;
+            border-radius: 4px;
+            width: 100%;
+            height: 33px;
+            cursor: pointer;
+
+            @media screen and (min-width: $desktop) {
+                width: 160px;
+            }
+        }
+    }
+
+    &__error {
+        font-size: 12px;
+        line-height: 14px;
+        font-weight: 400;
+        color: #FF1616;
+        margin: 1px 0 0;
+        padding: 8px 9px;
+        border: 1px solid #FF1616;
+        box-shadow: 0px 4px 4px rgba(196, 196, 196, 0.5);
+    }
+}
